; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/fs/cachefiles/extr_daemon.c_cachefiles_daemon_bcull.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/fs/cachefiles/extr_daemon.c_cachefiles_daemon_bcull.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.cachefiles_cache = type { i64, i64, i64 }

@.str = private unnamed_addr constant [4 x i8] c",%s\00", align 1
@EINVAL = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.cachefiles_cache*, i8*)* @cachefiles_daemon_bcull to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @cachefiles_daemon_bcull(%struct.cachefiles_cache* %0, i8* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.cachefiles_cache*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i64, align 8
  store %struct.cachefiles_cache* %0, %struct.cachefiles_cache** %4, align 8
  store i8* %1, i8** %5, align 8
  %7 = load i8*, i8** %5, align 8
  %8 = call i32 @_enter(i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str, i64 0, i64 0), i8* %7)
  %9 = load i8*, i8** %5, align 8
  %10 = load i8, i8* %9, align 1
  %11 = icmp ne i8 %10, 0
  br i1 %11, label %15, label %12

12:                                               ; preds = %2
  %13 = load i32, i32* @EINVAL, align 4
  %14 = sub nsw i32 0, %13
  store i32 %14, i32* %3, align 4
  br label %52

15:                                               ; preds = %2
  %16 = load i8*, i8** %5, align 8
  %17 = call i64 @simple_strtoul(i8* %16, i8** %5, i32 10)
  store i64 %17, i64* %6, align 8
  %18 = load i8*, i8** %5, align 8
  %19 = getelementptr inbounds i8, i8* %18, i64 0
  %20 = load i8, i8* %19, align 1
  %21 = sext i8 %20 to i32
  %22 = icmp ne i32 %21, 37
  br i1 %22, label %29, label %23

23:                                               ; preds = %15
  %24 = load i8*, i8** %5, align 8
  %25 = getelementptr inbounds i8, i8* %24, i64 1
  %26 = load i8, i8* %25, align 1
  %27 = sext i8 %26 to i32
  %28 = icmp ne i32 %27, 0
  br i1 %28, label %29, label %32

29:                                               ; preds = %23, %15
  %30 = load i32, i32* @EINVAL, align 4
  %31 = sub nsw i32 0, %30
  store i32 %31, i32* %3, align 4
  br label %52

32:                                               ; preds = %23
  %33 = load i64, i64* %6, align 8
  %34 = load %struct.cachefiles_cache*, %struct.cachefiles_cache** %4, align 8
  %35 = getelementptr inbounds %struct.cachefiles_cache, %struct.cachefiles_cache* %34, i32 0, i32 0
  %36 = load i64, i64* %35, align 8
  %37 = icmp ule i64 %33, %36
  br i1 %37, label %44, label %38

38:                                               ; preds = %32
  %39 = load i64, i64* %6, align 8
  %40 = load %struct.cachefiles_cache*, %struct.cachefiles_cache** %4, align 8
  %41 = getelementptr inbounds %struct.cachefiles_cache, %struct.cachefiles_cache* %40, i32 0, i32 1
  %42 = load i64, i64* %41, align 8
  %43 = icmp uge i64 %39, %42
  br i1 %43, label %44, label %48

44:                                               ; preds = %38, %32
  %45 = load %struct.cachefiles_cache*, %struct.cachefiles_cache** %4, align 8
  %46 = load i8*, i8** %5, align 8
  %47 = call i32 @cachefiles_daemon_range_error(%struct.cachefiles_cache* %45, i8* %46)
  store i32 %47, i32* %3, align 4
  br label %52

48:                                               ; preds = %38
  %49 = load i64, i64* %6, align 8
  %50 = load %struct.cachefiles_cache*, %struct.cachefiles_cache** %4, align 8
  %51 = getelementptr inbounds %struct.cachefiles_cache, %struct.cachefiles_cache* %50, i32 0, i32 2
  store i64 %49, i64* %51, align 8
  store i32 0, i32* %3, align 4
  br label %52

52:                                               ; preds = %48, %44, %29, %12
  %53 = load i32, i32* %3, align 4
  ret i32 %53
}

declare dso_local i32 @_enter(i8*, i8*) #1

declare dso_local i64 @simple_strtoul(i8*, i8**, i32) #1

declare dso_local i32 @cachefiles_daemon_range_error(%struct.cachefiles_cache*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
